fix misaligned things

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -150,7 +150,7 @@
 .case__details{
     width: 60%;
     display: inline-block;
-    padding: 40px 50px;
+    padding: 40px 50px 40px 80px;
     color: white;
     @media only screen and (max-width: 991px) {
         width: 100%;
@@ -220,9 +220,8 @@
 
 // contact page
 .contact{
-    .content-container{
-        max-width: 800px;
-        margin: 0 auto;
+    .footer--top{
+      display: none;
     }
     .banner{
         position: relative;
@@ -248,7 +247,11 @@
     min-height:40px;
     display: table;
     line-height: 19px;
-    font-size: 14px;
+    font-size: 16px;
+    background: $green;
+    max-width: 552px;
+    margin: 0 auto;
+    padding: 20px;
     .cell{
         vertical-align: middle
     }
